feat: visualise  customer visible projects
add an icon to the comment field for customer visible projects

--- a/app/components/report-row/template.hbs
+++ b/app/components/report-row/template.hbs
@@ -15,6 +15,9 @@
     onchange={{action (mut changeset.comment) value='target.value'}}
     data-test-report-comment
   >
+  {{#if changeset.task.project.customerVisible }}
+      <CustomerVisibleIcon class="customer-visible-icon" />
+  {{/if}}
 </div>
 <div class="form-list-cell form-group">
   {{sy-durationpicker-day data-test-report-duration disabled=(not editable) value=changeset.duration on-change=(action (mut changeset.duration))}}</div>
