--- a/app/statistics/template.hbs
+++ b/app/statistics/template.hbs
@@ -1,6 +1,12 @@
 {{#if (or (media 'isMo') (media 'isXs') (media 'isSm'))}}
   {{no-mobile-message}}
 {{else}}
+  {{#if (not hasAccess)}}
+    <div class="text-center" data-test-access-forbidden>
+      <h1>Access forbidden</h1>
+      <h4>You do not have the permission to access this page</h4>
+    </div>
+  {{else}}
   <h1>Statistics</h1>
 
   {{#task-selection
@@ -199,4 +205,5 @@
       on-ordering-change = (action (mut ordering))
     }}
   </div>
+  {{/if}}
 {{/if}}
