fix: fix tests for external users rename canSee to canAccess and move it to new page ability

--- a/app/analysis/index/template.hbs
+++ b/app/analysis/index/template.hbs
@@ -1,7 +1,7 @@
 {{#if (or (media 'isMo') (media 'isXs') (media 'isSm'))}}
   {{no-mobile-message}}
 {{else}}
-  {{#if (not hasAccess)}}
+  {{#if (cannot "access page")}}
     <div class="text-center" data-test-access-forbidden>
       <h1>Access forbidden</h1>
       <h4>You do not have the permission to access this page</h4>
