--- a/app/analysis/edit/template.hbs
+++ b/app/analysis/edit/template.hbs
@@ -1,4 +1,4 @@
-{{#if (not hasAccess)}}
+{{#if (cannot "access page")}}
   <div class="text-center" data-test-access-forbidden>
     <h1>Access forbidden</h1>
     <h4>You do not have the permission to access this page</h4>
