--- a/app/statistics/template.hbs
+++ b/app/statistics/template.hbs
@@ -1,193 +1,196 @@
 {{#if (or (media 'isMo') (media 'isXs') (media 'isSm'))}}
-  {{no-mobile-message}}
+  <NoMobileMessage/>
 {{else}}
-  {{#if (cannot "access page")}}
-    <div class="text-center" data-test-access-forbidden>
-      <h1>Access forbidden</h1>
-      <h4>You do not have the permission to access this page</h4>
-    </div>
-  {{else}}
+  <PagePermission>
     <h1>Statistics</h1>
 
-    {{#task-selection
-      history         = false
-      archived        = true
-      on-set-customer = (action 'setModelFilter' 'customer')
-      on-set-project  = (action 'setModelFilter' 'project')
-      on-set-task     = (action 'setModelFilter' 'task')
-      initial         = (hash
+    <TaskSelection
+      @history={{false}}
+      @archived={{true}}
+      @on-set-customer={{action 'setModelFilter' 'customer'}}
+      @on-set-project={{action 'setModelFilter' 'project'}}
+      @on-set-task={{action 'setModelFilter' 'task'}}
+      @initial={{hash
         customer      = selectedCustomer
         project       = selectedProject
         task          = selectedTask
-      )
-    as |t|}}
-      {{#filter-sidebar
-        appliedCount = appliedFilters.length
-        on-reset     = (action (queue t.clear (action 'reset')))
-      as |fs|}}
-        {{#fs.group label='Task' expanded=true}}
-          {{#fs.label}}
+      }}
+    as |t|>
+      <FilterSidebar
+        @appliedCount={{this.appliedFilters.length}}
+        @on-reset={{action (queue t.clear (action 'reset'))}}
+      as |fs|>
+        <fs.group @label='Task' @expanded={{true}}>
+          <fs.label>
             Customer
-            {{#fs.filter data-test-filter-customer}}
-              {{t.customer}}
-            {{/fs.filter}}
-          {{/fs.label}}
-          {{#fs.label}}
+            <fs.filter data-test-filter-customer>
+              <t.customer/>
+            </fs.filter>
+          </fs.label>
+          <fs.label>
             Project
-            {{#fs.filter data-test-filter-project}}
-              {{t.project}}
-            {{/fs.filter}}
-          {{/fs.label}}
-          {{#fs.label}}
+            <fs.filter data-test-filter-project>
+              <t.project/>
+            </fs.filter>
+          </fs.label>
+          <fs.label>
             Task
-            {{#fs.filter data-test-filter-task}}
-              {{t.task}}
-            {{/fs.filter}}
-          {{/fs.label}}
-        {{/fs.group}}
-        {{#fs.group label='Responsibility'}}
-          {{#fs.label}}
+            <fs.filter data-test-filter-task>
+              <t.task/>
+            </fs.filter>
+          </fs.label>
+        </fs.group>
+        <fs.group @label='Responsibility'>
+          <fs.label>
             User
-            {{#fs.filter data-test-filter-user}}
-              {{#user-selection
-                user          = selectedUser
-                on-change     = (action 'setModelFilter' 'user')
-              as |u|}}
-                {{u.user}}
-              {{/user-selection}}
-            {{/fs.filter}}
-          {{/fs.label}}
-          {{#fs.label}}
+            <fs.filter data-test-filter-user>
+              <UserSelection
+                @user={{this.selectedUser}}
+                @on-change={{action 'setModelFilter' 'user'}}
+              as |u|>
+                <u.user/>
+              </UserSelection>
+            </fs.filter>
+          </fs.label>
+          <fs.label>
             Reviewer
-            {{#fs.filter data-test-filter-reviewer}}
-              {{#user-selection
-                user          = selectedReviewer
-                on-change     = (action 'setModelFilter' 'reviewer')
-                queryOptions  = (hash is_reviewer=1)
-              as |u|}}
-                {{u.user placeholder='Select reviewer...'}}
-              {{/user-selection}}
-            {{/fs.filter}}
-          {{/fs.label}}
-        {{/fs.group}}
-        {{#fs.group label='Finances'}}
-          {{#fs.label}}
+            <fs.filter data-test-filter-reviewer>
+              <UserSelection
+                @user={{this.selectedReviewer}}
+                @on-change={{action 'setModelFilter' 'reviewer'}}
+                @queryOptions={{hash is_reviewer=1}}
+              as |u|>
+                <u.user @placeholder='Select reviewer...'/>
+              </UserSelection>
+            </fs.filter>
+          </fs.label>
+        </fs.group>
+        <fs.group @label='Finances'>
+          <fs.label>
             Billing type
-            {{fs.filter 'select'
+            <fs.filter
               data-test-filter-billing-type
-              selected  = billingType
-              valuePath = 'id'
-              labelPath = 'name'
-              prompt    = 'All billing types'
-              options   = billingTypes
-              on-change = (action (mut billingType))
-            }}
-          {{/fs.label}}
-          {{#fs.label}}
+              @type='select'
+              @selected={{this.billingType}}
+              @valuePath='id'
+              @labelPath='name'
+              @prompt='All billing types'
+              @options={{this.billingTypes}}
+              @on-change={{fn (mut billingType)}}
+            />
+          </fs.label>
+          <fs.label>
             Cost center
-            {{fs.filter 'select'
+            <fs.filter
               data-test-filter-cost-center
-              selected  = costCenter
-              valuePath = 'id'
-              labelPath = 'name'
-              prompt    = 'All cost centers'
-              options   = costCenters
-              on-change = (action (mut costCenter))
-            }}
-          {{/fs.label}}
-        {{/fs.group}}
-        {{#fs.group label='Time range'}}
-          {{#fs.label}}
+              @type='select'
+              @selected={{this.costCenter}}
+              @valuePath='id'
+              @labelPath='name'
+              @prompt='All cost centers'
+              @options={{this.costCenters}}
+              @on-change={{fn (mut costCenter)}}
+            />
+          </fs.label>
+        </fs.group>
+        <fs.group @label='Time range'>
+          <fs.label>
             From
-            {{fs.filter 'date'
+            <fs.filter
               data-test-filter-from-date
-              selected  = fromDate
-              on-change = (action (mut fromDate))
-            }}
-          {{/fs.label}}
-          {{#fs.label}}
+              @type='date'
+              @selected={{this.fromDate}}
+              @on-change={{fn (mut fromDate)}}
+            />
+          </fs.label>
+          <fs.label>
             To
-            {{fs.filter 'date'
+            <fs.filter
               data-test-filter-to-date
-              selected  = toDate
-              on-change = (action (mut toDate))
-            }}
-          {{/fs.label}}
-          {{date-buttons
-              onUpdateFromDate=(action (mut fromDate))
-              onUpdateToDate=(action (mut toDate))
-          }}
-        {{/fs.group}}
-        {{#fs.group label='State'}}
-          {{#fs.label}}
+              @type='date'
+              @selected={{this.toDate}}
+              @on-change={{fn (mut toDate)}}
+            />
+          </fs.label>
+          <DateButtons
+              @onUpdateFromDate={{fn (mut fromDate)}}
+              @onUpdateToDate={{fn (mut toDate)}}
+          />
+        </fs.group>
+        <fs.group @label='State'>
+          <fs.label>
             Review
-            {{fs.filter 'button'
+            <fs.filter
               data-test-filter-review
-              selected  = review
-              valuePath = 'value'
-              labelPath = 'label'
-              options = (array
+              @type='button'
+              @selected={{this.review}}
+              @valuePath='value'
+              @labelPath='label'
+              @options={{array
                 (hash label='All' value='')
                 (hash label='Needed' value='1')
                 (hash label='Not needed' value='0')
-              )
-              on-change = (action (mut review))
-            }}
-          {{/fs.label}}
-          {{#fs.label}}
+              }}
+              @on-change={{fn (mut review)}}
+            />
+          </fs.label>
+          <fs.label>
             Billability
-            {{fs.filter 'button'
+            <fs.filter
               data-test-filter-not-billable
-              selected  = notBillable
-              valuePath = 'value'
-              labelPath = 'label'
-              options = (array
+              @type='button'
+              @selected={{this.notBillable}}
+              @valuePath='value'
+              @labelPath='label'
+              @options={{array
                 (hash label='All' value='')
                 (hash label='Billable' value='0')
                 (hash label='Not billable' value='1')
-              )
-              on-change = (action (mut notBillable))
-            }}
-          {{/fs.label}}
-          {{#fs.label}}
+              }}
+              @on-change={{fn (mut notBillable)}}
+            />
+          </fs.label>
+          <fs.label>
             Verified
-            {{fs.filter 'button'
+            <fs.filter
               data-test-filter-verified
-              selected  = verified
-              valuePath = 'value'
-              labelPath = 'label'
-              options = (array
+              @type='button'
+              @selected={{this.verified}}
+              @valuePath='value'
+              @labelPath='label'
+              @options={{array
                 (hash label='All' value='')
                 (hash label='Verified' value='1')
                 (hash label='Not verified' value='0')
-              )
-              on-change = (action (mut verified))
-            }}
-          {{/fs.label}}
-          {{#fs.label}}
+              }}
+              @on-change={{fn (mut verified)}}
+            />
+          </fs.label>
+          <fs.label>
             Billed
-            {{fs.filter 'button'
+            <fs.filter
               data-test-filter-billed
-              selected  = billed
-              valuePath = 'value'
-              labelPath = 'label'
-              options = (array
+              @type='button'
+              @selected={{this.billed}}
+              @valuePath='value'
+              @labelPath='label'
+              @options={{array
                 (hash label='All' value='')
                 (hash label='Billed' value='1')
                 (hash label='Not Billed' value='0')
-              )
-              on-change = (action (mut billed))
-            }}
-          {{/fs.label}}
-        {{/fs.group}}
-      {{/filter-sidebar}}
-    {{/task-selection}}
+              }}
+              @on-change={{fn (mut billed)}}
+            />
+          </fs.label>
+        </fs.group>
+      </FilterSidebar>
+    </TaskSelection>
 
     <div>
       <ul class="nav-tabs">
         {{#each types as |t|}}
           <li>
-            <a href="#" class={{if (eq t type) 'active'}} {{action (mut type) t}}>
+            <a href="#" class={{if (eq t type) 'active'}} {{on 'click' (fn (mut type) t)}}>
               By {{t}}
             </a>
           </li>
@@ -196,14 +199,14 @@
     </div>
 
     <div class="tab-content grid">
-      {{statistic-list
-        data               = data
-        type               = type
-        missingParams      = missingParams
-        ordering           = ordering
-        class              = 'grid-cell'
-        on-ordering-change = (action (mut ordering))
-      }}
+      <StatisticList
+        class='grid-cell'
+        @data={{this.data}}
+        @type={{this.type}}
+        @missingParams={{this.missingParams}}
+        @ordering={{this.ordering}}
+        @on-ordering-change={{fn (mut ordering)}}
+      />
     </div>
-  {{/if}}
+  </PagePermission>
 {{/if}}
