feat(analysis): display reports only if filters are set

--- a/app/analysis/index/template.hbs
+++ b/app/analysis/index/template.hbs
@@ -332,8 +332,7 @@
         <div class="empty">
           <div>
             {{fa-icon 'search'}}
-            <h3>No reports to display</h3>
-            <p>Maybe try loosening your filters</p>
+            <h3>Apply filters to display reports</h3>
           </div>
         </div>
       {{/with}}
